# peracotta

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  InputFileNotFoundError.py  Installing.py  Makefile  Pipfile  README.md  TODO.md  check_dependencies.sh  connector.txt  crash_reporting.py  dimms.txt  dmditest.py  esercizio.py  extract_data.py  flake.nix  generate_files.sh  install_dependencies.sh  install_dependencies_all.sh  install_dependencies_gui.sh  interface.ui  main.py  main.sh  main_docker.sh  main_with_gui.py  new_gui.py  norm_script_alpha.py  normalize_brands.py  normalized.csv  peracommon.py  peracotta  peracotta-cli  peracruda  polkit.py  prettyprinter.py  publish.sh  pyproject.toml  pytest.ini  (+19 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4p56all1xc6vzvd99qggzm78czk1wbyj-source  cc0ribc27c349w1v2anrby7z8kigy5pq-source
.github/workflows/: docker-image.yml  lint.yml  publish.yml  python-tests.yml
assets/: error.ui  interface - bak.ui  interface.ui  uploadTaralloDialog.ui
assets/themes/: Dark.css  WEEE Open.css  dark.css  weee open.css
parsers/: read_decode_dimms.py  read_dmidecode.py  read_lscpu.py  read_lspci_and_glxinfo.py  read_smartctl.py  windows_parser.py
peracotta/: PeraThread.py  Toolbox.py  Ui.py  __main__.py  commons.py  tarallo.py
peracotta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: generate_files.sh  get_windows_specs.py  install_dependencies_gui.sh  move_pkexec_policy_file.sh
src/: __init__.py  commons.py  config.py  config.toml  constants.py  logger.py  peracruda.py  peralog.py  reporter.py  tarallo.py
src/assets/: interface.ui  uploadTaralloDialog.ui
src/gui/: PeraThread.py  Toolbox.py  __init__.py  exception_handler.py  gui.py  prettyprinter.py  widgets.py
src/parsers/: windows_parser.py
src/peracotta/: __init__.py  commons.py  config.py  config.toml  constants.py  crash_reporting.py  features.json  peracruda.py  peralog.py  reporter.py  tarallo.py
tests/: test.py  test_2014-castes-mbp.py  test_2018-castes-mbp.py  test_77.py  test_Thinkpad-R500.py  test_asdpc.py  test_asdpc2.py  test_cassone.py  test_castes-HP-dc7600.py  test_castes-pc.py  test_castes-surfacepro.py  test_dimms.py  test_dismone.py  test_hdd.py  test_jm11.py  test_lspci.py  test_polveroso.py  test_rottame.py  test_travasato.py  test_viabork.py  test_viavai.py  test_workstation.py
tests/2014-castes-mbp/: baseboard.txt  chassis.txt  connector.txt  lscpu.txt  lspci.txt  smartctl-dev-sda.txt
tests/2018-castes-mbp/: baseboard.txt  chassis.txt  glxinfo.txt
tests/77/: baseboard.txt
tests/77-no-disks/: chassis.txt
tests/Thinkpad-R500/: baseboard.txt  lspci.txt  smartctl-dev-sdb.txt
tests/alecase/: baseboard.txt  connector.txt  dimms.txt  glxinfo.txt  lspci.txt
tests/asdpc/: chassis.txt  connector.txt  glxinfo.txt  lspci.txt  smartctl-dev-sdb.txt
tests/asdpc2/: baseboard.txt  chassis.txt  connector.txt  glxinfo.txt
tests/cassone/: baseboard.txt  chassis.txt  lspci.txt
tests/castes-HP-dc7600/: baseboard.txt  connector.txt
tests/castes-SurfacePro4/: connector.txt  lscpu.txt  lspci.txt
tests/castes-pc/: baseboard.txt  glxinfo.txt  lspci.txt  smartctl-dev-sda.txt  smartctl-dev-sdb.txt
tests/dismone/: chassis.txt  lspci.txt  net.txt  net_different.txt  net_too_few.txt  smartctl-dev-sda.txt  smartctl-dev-sdb.txt
tests/extract_data/: crash_reporting.py  megatest9000.py  test_77.py  test_output.py
tests/gui/: test_pretty_print.py
tests/integration/: test_integration.py  test_integration_TMP.py
tests/jm11/: baseboard.txt  connector.txt  lscpu.txt  lspci.txt
tests/main_with_gui/: test_gui.py
tests/new_tests/: test_config.py
tmp/: baseboard.txt  chassis.txt  glxinfo.txt  lscpu.txt  lspci.txt  smartctl-dev-sda.txt
win/: get_windows_specs.py
(+296 files in other folders)
