[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peracotta"
dynamic = ["version"]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Environment :: X11 Applications :: Qt",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "certifi==2023.11.17",
  "chardet==4.0.0",
  "colorama==0.4.4",
  "commonmark==0.9.1",
  "idna==2.10",
  "Pygments==2.8.1",
  "PyQt6==6.6.0",
  "pytarallo>=2.3.0",
  "python-dotenv==0.17.0",
  "requests==2.25.1",
  "typing-extensions==3.7.4.3",
  "urllib3==1.26.5",
  "loguru==0.7.2",
  "PyQt6"
]

[project.scripts]
peracruda = "peracotta:main_cli"

[project.gui-scripts]
peracotta = "peracotta:main_gui"

[tool.setuptools.package-dir]
peracotta = "src"

[tool.setuptools.package-data]
peracotta = [".env", "*"]
"peracotta.scripts" = ["*"]
"peracotta.assets" = ["*", "*/*"]

[tool.setuptools.dynamic]
version = { attr = "peracotta.constants.VERSION" }

[tool.black]
line-length = 160
